syntax = "proto3";

package orders.models.v1;

option go_package = "github.com/ivkhr/orderstream/internal/pb/models";

message OrderModel {
  string order_id = 1; // uuid
  string user_id = 2;  // uuid
  double amount = 3;
  string status = 4;
  string payload_json = 5; // raw json as string
  string created_at = 6;   // RFC3339
  string updated_at = 7;   // RFC3339
  int32 bucket = 8;
}


